# Dayslice-Lite

./: README.md  appwin.vala  dayslicelite.gresources.xml  main.ui  main.vala  meson.build  notifier.vala
acceptance/: acceptance.robot  dayslicelite.py
src/: appwin.vala  main.ui  main.vala  notifier.vala  robot.i  robot.vala  test_time_humanizer.vala  timehumanizer.vala  timeprovider.vala
tools/: statecraft.scm
